feat: create unit tests