@@ -4,6 +4,7 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -16,80 +17,78 @@ import teste_tecnico_analista_pleno.repository.TransferRepository;
 
 @Service
 public class TransferService implements TransferServiceInterface {
-       private final TransferRepository repository;
-       private final TransferMapper mapper;
+    private final TransferRepository repository;
+    private final TransferMapper mapper;
 
-   public TransferService(TransferRepository repository, TransferMapper mapper) {
-    this.repository = repository;
-    this.mapper = mapper;
-}
+    public TransferService(TransferRepository repository, TransferMapper mapper) {
+        this.repository = repository;
+        this.mapper = mapper;
+    }
 
-   @Override
-public TransferResponseDto create(TransferRequestDto request) {
+    @Override
+    public TransferResponseDto create(TransferRequestDto request) {
 
-    validateAccount(request.getOriginAccount());
-    validateAccount(request.getDestinationAccount());
+        validateAccount(request.getOriginAccount());
+        validateAccount(request.getDestinationAccount());
 
-    Transfer transfer = new Transfer();
+        Transfer transfer = new Transfer();
 
-    transfer.setOriginAccount(request.getOriginAccount());
-    transfer.setDestinationAccount(request.getDestinationAccount());
-    transfer.setAmount(request.getAmount());
-    transfer.setTransferDate(request.getTransferDate());
-    transfer.setAppointmentDate(LocalDate.now());
+        transfer.setOriginAccount(request.getOriginAccount());
+        transfer.setDestinationAccount(request.getDestinationAccount());
+        transfer.setAmount(request.getAmount());
+        transfer.setTransferDate(request.getTransferDate());
+        transfer.setAppointmentDate(LocalDate.now());
 
-    transfer.setFee(calculateFee(transfer));
+        transfer.setFee(calculateFee(transfer));
 
-    Transfer saved = repository.save(transfer);
+        Transfer saved = repository.save(transfer);
 
-    return mapper.toResponse(saved);
-}
+        return mapper.toResponse(saved);
+    }
 
-   @Override
-public List<TransferResponseDto> getByAccount(String account) {
+    @Override
+    public List<TransferResponseDto> getByAccount(String account) {
 
     return repository.findByOriginAccount(account)
             .stream()
             .map(mapper::toResponse)
-            .toList();
+            .collect(Collectors.toList());
 }
 
-public BigDecimal calculateFee(Transfer transfer) {
+    public BigDecimal calculateFee(Transfer transfer) {
 
-    long days = ChronoUnit.DAYS.between(
-            transfer.getAppointmentDate(),
-            transfer.getTransferDate()
-    );
+        long days = ChronoUnit.DAYS.between(
+                transfer.getAppointmentDate(),
+                transfer.getTransferDate());
 
-    if (days < 0 || days > 50) {
-        throw new FeeNotApplicableException("Transfer not allowed. Fee not applicable");
+        if (days < 0 || days > 50) {
+            throw new FeeNotApplicableException("Transfer not allowed. Fee not applicable");
+        }
+
+        BigDecimal fee;
+
+        if (days == 0) {
+            fee = new BigDecimal("0.025");
+        } else if (days <= 10) {
+            fee = BigDecimal.ZERO;
+        } else if (days <= 20) {
+            fee = new BigDecimal("0.082");
+        } else if (days <= 30) {
+            fee = new BigDecimal("0.069");
+        } else if (days <= 40) {
+            fee = new BigDecimal("0.047");
+        } else {
+            fee = new BigDecimal("0.017");
+        }
+
+        return transfer.getAmount().multiply(fee);
     }
 
-    BigDecimal fee;
+    private void validateAccount(String account) {
 
-    if (days == 0) {
-        fee = new BigDecimal("0.025");
-    } else if (days <= 10) {
-        fee = BigDecimal.ZERO;
-    } else if (days <= 20) {
-        fee = new BigDecimal("0.082");
-    } else if (days <= 30) {
-        fee = new BigDecimal("0.069");
-    } else if (days <= 40) {
-        fee = new BigDecimal("0.047");
-    } else {
-        fee = new BigDecimal("0.017");
+        if (account == null || account.length() != 10) {
+            throw new IllegalArgumentException(
+                    "A conta deve possuir 10 caracteres");
+        }
     }
-
-    return transfer.getAmount().multiply(fee);
-}
-
-private void validateAccount(String account) {
-
-    if (account == null || account.length() != 10) {
-        throw new IllegalArgumentException(
-            "A conta deve possuir 10 caracteres"
-        );
-    }
-}
 }
